--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             width: 30%;
             margin: 10px;
             padding: 10px;
-            border: 1px solid black;
+            border: none; /* Remove the border */
         }
     </style>
 </head>
