--- a/index.html
+++ b/index.html
@@ -11,10 +11,11 @@
         }
 
         .figure-container {
-            width: 30%;
-            margin: 10px;
-            padding: 10px;
-            border: none; /* Remove the border */
+            display: inline-block;
+            width: 45%;
+            margin: 20px;
+			opacity: 0.95;
+			box-shadow: 2px 2px 4px rgba(88, 88, 88, 0.1);
         }
     </style>
 </head>
