--- a/index.html
+++ b/index.html
@@ -5,15 +5,16 @@
     <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
     <style>
         body {
-            display: flex;
+            	display: flex;
         }
 
         .figure-container {
-            display: inline-block;
-            width: 45%;
-            margin: 20px;
-			opacity: 0.95;
-			box-shadow: 2px 2px 4px rgba(88, 88, 88, 0.1);
+            	display: inline-block;
+            	width: 45%;
+            	margin: 20px;
+		padding: 10px;
+		opacity: 0.95;
+		box-shadow: 2px 2px 4px rgba(88, 88, 88, 0.1);
         }
     </style>
 </head>
