--- a/index.html
+++ b/index.html
@@ -19,15 +19,13 @@
     </style>
 </head>
 <body>
-    <div class="figure-container" id="figure-container-1"></div>
-    <div class="figure-container" id="figure-container-2"></div>
-
-    <div class="figure-container" id="figure-container-3"></div>
-    <div class="figure-container" id="figure-container-4"></div>
-    <div class="figure-container" id="figure-container-5"></div>
-
-    <div class="figure-container" id="figure-container-6"></div>
-    <div class="figure-container" id="figure-container-7"></div>
+    <div class="figure-container" id="figure-container-1"></div><br></br>
+    <div class="figure-container" id="figure-container-2"></div><br></br>
+    <div class="figure-container" id="figure-container-3"></div><br></br>
+    <div class="figure-container" id="figure-container-4"></div><br></br>
+    <div class="figure-container" id="figure-container-5"></div><br></br>
+    <div class="figure-container" id="figure-container-6"></div><br></br>
+    <div class="figure-container" id="figure-container-7"></div><br></br>
     <div class="figure-container" id="figure-container-8"></div>
 
     <script>
