--- a/index.html
+++ b/index.html
@@ -5,13 +5,14 @@
     <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
     <style>
         .figure-container {
-            	display: inline-block;
-            	width: 45%;
-            	margin: 20px;
-		padding: 10px;
+		display: flex;
 		opacity: 0.95;
-		box-shadow: 2px 2px 4px rgba(88, 88, 88, 0.1);
-        }
+		justify-content: center;
+		background-color: white;
+		vertical-align: top;
+		margin: 20px;
+		padding: 10px
+		}
     </style>
 </head>
 <body>
