--- a/index.html
+++ b/index.html
@@ -31,11 +31,11 @@
 	</div>
     <div class="figure-container" id="figure-container-1"></div><br></br>
     <div class="figure-container" id="figure-container-2"></div><br></br>
-    <div class="figure-container" id="figure-container-3"></div><br></br>
+    <div class="figure-container" id="figure-container-3"></div>
     <div class="figure-container" id="figure-container-4"></div><br></br>
-    <div class="figure-container" id="figure-container-5"></div><br></br>
+    <div class="figure-container" id="figure-container-5"></div>
     <div class="figure-container" id="figure-container-6"></div><br></br>
-    <div class="figure-container" id="figure-container-7"></div><br></br>
+    <div class="figure-container" id="figure-container-7"></div>
     <div class="figure-container" id="figure-container-8"></div>
 
     <script>
