--- a/index.html
+++ b/index.html
@@ -23,6 +23,13 @@
 		margin: 20px;
 		padding: 10px
 		}
+	.chart-container {
+                display: inline-block;
+                width: 45%;
+                margin: 20px;
+		opacity: 0.95;
+		box-shadow: 2px 2px 4px rgba(88, 88, 88, 0.1);
+       	 	}
     </style>
 </head>
 <body>
@@ -31,12 +38,12 @@
 	</div>
     <div class="figure-container" id="figure-container-1"></div><br></br>
     <div class="figure-container" id="figure-container-2"></div><br></br>
-    <div class="figure-container" id="figure-container-3"></div>
-    <div class="figure-container" id="figure-container-4"></div><br></br>
-    <div class="figure-container" id="figure-container-5"></div>
-    <div class="figure-container" id="figure-container-6"></div><br></br>
-    <div class="figure-container" id="figure-container-7"></div>
-    <div class="figure-container" id="figure-container-8"></div>
+    <div class="chart-container" id="figure-container-3"></div>
+    <div class="chart-container" id="figure-container-4"></div><br></br>
+    <div class="chart-container" id="figure-container-5"></div>
+    <div class="chart-container" id="figure-container-6"></div><br></br>
+    <div class="chart-container" id="figure-container-7"></div>
+    <div class="chart-container" id="figure-container-8"></div>
 
     <script>
         // Load Plotly figures into containers
