--- a/index.html
+++ b/index.html
@@ -41,6 +41,10 @@
     <div class="chart-container" id="figure-container-3"></div>
     <div class="chart-container" id="figure-container-4"></div><br></br>
     <div class="chart-container" id="figure-container-5"></div>
+
+<div class="title-container">
+		<h1>Food Security in Population of Canada</em></h1>
+	</div>
     <div class="chart-container" id="figure-container-6"></div><br></br>
     <div class="chart-container" id="figure-container-7"></div>
     <div class="chart-container" id="figure-container-8"></div>
